Add threading for continuous monitoring

--- a/p2/Makefile
+++ b/p2/Makefile
@@ -1,18 +1,12 @@
 SHELL := /bin/bash
 PYTHON := $(shell which python2.7)
-OPT := $(CURDIR)/opt
-export PATH := $(OPT)/bin:$(PATH)
 
 .PHONY: all clean
 
-all: $(OPT) $(CURDIR)/tail
-
-$(OPT):
-	virtualenv --python=$(PYTHON) $@
-	pip install -U pip setuptools watchdog
+all: $(CURDIR)/tail
 
 $(CURDIR)/tail:
 	ln -s $@.py $@
 
 clean:
-	rm -rf $(CURDIR)/tail $(OPT)
+	rm -rf $(CURDIR)/tail
